# data-visualization

./: README.md  modified_random_walk.py  modified_rw_visual.py  molecular_motion.py  mpl_squares.py  pyproject.toml  random_walk.py  rw_visual.py  scatter_cubes_a.py  scatter_squares.py
line_graphs/: scatter_cubes_b.py  scatter_squares.py
mapping_global_datasets/: eq_explore_data.py  eq_world_map.py  world_fires.py
random_walks/: random_walk.py
rolling_die/: die.py  die_visual.py  die_visual_d6d10.py  die_visual_d6d6d6.py  die_visual_d8d8.py  die_visual_list_comprehension.py  die_visual_multiplication.py
weather/: automatic_indexes.py  death_valley_highs_lows.py  death_valley_highs_lows_adjusted_y_axis.py  sitka_high_lows.py  sitka_highs.py  sitka_highs_lows.py  sitka_highs_lows_adjusted_y_axis.py
web_apis/: hn_article.py  hn_submissions.json  hn_submissions.py  python_repos.py  python_repos_visual.py
