[tool.poetry]
name = "data-sci"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "data_sci"}]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.2"
plotly = "^5.15.0"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
